WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48081
Regression (
r69548
): cancelled autocorrection suggestion is still applied.
https://bugs.webkit.org/show_bug.cgi?id=48081
Summary
Regression (r69548): cancelled autocorrection suggestion is still applied.
Jia Pu
Reported
2010-10-21 11:42:50 PDT
Similar to the regression reported in
bug 47689
, after the patch
r69548
, even after user pressed ESC to cancel autocorrection panel, the correction suggestion is still applied. <
rdar://problem/8579765
>
Attachments
Proposed Patch (v1)
(3.14 KB, patch)
2010-10-21 13:30 PDT
,
Jia Pu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jia Pu
Comment 1
2010-10-21 13:30:02 PDT
Created
attachment 71480
[details]
Proposed Patch (v1)
WebKit Commit Bot
Comment 2
2010-10-22 08:52:22 PDT
Comment on
attachment 71480
[details]
Proposed Patch (v1) Rejecting patch 71480 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=abarth-cq-sl', 'land-attachment', '--force-clean', '--ignore-builders', '--quiet', '--non-interactive', '--parent-command=commit-queue', 71480]" exit_code: 1 Last 500 characters of output: on=edit Fetching:
https://bugs.webkit.org/show_bug.cgi?id=48081
&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Updating working directory Processing patch 71480 from
bug 48081
. NOBODY (OOPS!) found in /Users/abarth/git/webkit-queue/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /Users/abarth/git/webkit-queue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/4718021
WebKit Commit Bot
Comment 3
2010-10-22 09:11:50 PDT
Comment on
attachment 71480
[details]
Proposed Patch (v1) Clearing flags on attachment: 71480 Committed
r70310
: <
http://trac.webkit.org/changeset/70310
>
WebKit Commit Bot
Comment 4
2010-10-22 09:11:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug