2010-10-22  Jia Pu  <jpu@apple.com>

Reviewed by Dan Bernstein.

        Regression (r69548): cancelled autocorrection suggestion is still applied.
        https://bugs.webkit.org/show_bug.cgi?id=48081
        <rdar://problem/8579765>

        The test requires a 0.3 second delay using setTimeout(). So we put it in manual-tests.

        * editing/Editor.cpp:
        (WebCore::Editor::handleRejectedCorrection): Clear autocorrection info when user dismissed the panel.
        * manual-tests/autocorrection/autocorrection-cancelled-by-ESC.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@70310 bbb929c8-8fbe-4397-9dbb-9b2b20218538