third_party/WebKit/WebCore/editing/Editor.cpp
@@ -2865,6 +2865,7 @@ void Editor::handleRejectedCorrection()
         return;
 
     replacedRange->startContainer()->document()->markers()->addMarker(replacedRange, DocumentMarker::RejectedCorrection, m_stringToBeReplacedByCorrection);
+    m_rangeToBeReplacedByCorrection.clear();
 }
 
 void Editor::startCorrectionPanelTimer()
